--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 httplib2
 requests>=2.18.4
-google-api-python-client
-oauth2client
+google-api-python-client>=1.7.4
+oauth2client>=4.1.2
 beautifulsoup4>=4.6.0
 python_dateutil
